started working on frontend React and increase openApi dependency version